<resources>
    <string name="app_name">索拉音乐</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="local_music">本地音乐</string>
    <string name="my">我的</string>
    <string name="download_music_list">下载音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_info">我的资料</string>
    <string name="menu_friends">好友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_skin">个性换肤</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于索拉音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_is_exit">是否退出应用</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="about">关于</string>
    <string name="about_system">关于索拉音乐</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="copyright">Copyright © 2015&#045;%d SWUST</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="activity_playlist">播放列表</string>
    <string name="forcast_weather">天气预报</string>
    <string name="is_delete_all">是否清空历史</string>
    <string name="is_delete">是否删除</string>
    <string name="download_music">下载音乐</string>
    <string name="recommoned_music">推荐列表</string>
    <string name="play_list">播放列表</string>
    <string name="is_exit">是否退出登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="exit_login">退出登录</string>
    <string name="get_weather_info_fail">获取天气数据失败</string>
    <string name="get_weather_info_again">正在重新获取</string>
    <string name="common">评论</string>
    <string name="login_tel_hint">请输入手机号码</string>
    <string name="login_pass_hint">请输入大于6位密码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_get_code_again">重新获取验证码</string>
    <string name="register_pass_hint_again">请再次输入密码</string>
    <string name="login_forget_pass">忘记密码?</string>
    <string name="register_next">下一步</string>
    <string name="change_info_tink">请输入修改信息</string>
    <string name="not_login">你还未登录，是否登录？</string>
    <string name="my_two_code">我的二维码</string>
    <string name="publish_common">发表评论</string>
    <string name="two_code_tink">扫描上面二维码即可进行好友关注</string>
    <string name="friend_tink">数据加载失败...</string>
    <string name="is_cancle_follow">是否取消关注</string>
</resources>
