<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_telnum" />

        <EditText
            android:id="@+id/phonenum_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/login_edittext_back"
            android:hint="@string/login_tel_hint"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/login_edittext_back"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login_forget_pass"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/login_bnt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_bnt_back"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/register_bnt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_bnt_back"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>